# spelling_analyzer

./: .gitignore  README.md  requirements.txt  setup.cfg
Usage/: create-pre-commit-hook.bat
src/: logger_config.py
src/CodeAnalyzer/: __init__.py  analyzer.py  cli.py
src/CodeReview/: __init__.py  pyspellchecker_runner.py
tests/: test_analyzer.py  test_pyspellchecker_runner.py
