# setup.cfg

[metadata]
name = spelling_analyzer
version = 1.0.0
author = Ahmad Awsaf uz zaman
author_email = engzaman2020@gmail.com
description = A spelling analyzer tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahmad-act/spelling_analyzer
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.13

[options.entry_points]
console_scripts =
    spelling-analyzer = src.CodeAnalyzer.cli:main